feat:后台页面和后台详情页面

--- a/app2/src/App.css
+++ b/app2/src/App.css
@@ -1,1 +1,19 @@
 @import '~antd/dist/antd.css';
+.fl{
+    float: left;
+}
+.fr{
+    float: right;
+}
+.clearfix:after{
+    content: '';
+    clear: both;
+    display: block;
+}
+ul{
+    margin: 0;
+    padding: 0;
+}
+li{
+    list-style: none;
+}
